--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-pjax": "^0.0.1",
     "fs-extra": "^11.1.1",
+    "jquery-pjax": "^2.0.1",
     "multer": "^1.4.5-lts.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^4.7.2"
   }
 }
